--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!doctype html>
-<html lang="en">
+<html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Duix Demo</title>
+    <title>数字人直播间</title>
+    
+    <!-- HLS.js 库用于支持 m3u8 直播流 -->
+    <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+    
+    <!-- 绿幕去除工具 -->
+    <script src="/chromakey.js"></script>
   </head>
   <body>
-    <div id="app">
-      <h1>Duix Guiji Light Demo</h1>
-      <div id="duix-container">
-        <p>加载中...</p>
-      </div>
-      <button id="start-btn">开始演示</button>
-    </div>
+    <div id="app"></div>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
